新增情报详情页

--- a/src/html/part/basic.pug
+++ b/src/html/part/basic.pug
@@ -54,7 +54,7 @@ html(lang="zh")
       .list
         a.item(class={active: subtitle == '未编辑'}, href="情报库-未编辑.html") 未编辑
         a.item(class={active: subtitle == '已编辑'}, href="情报库-已编辑.html") 已编辑
-        a.item(class={active: subtitle == '已录入'}, href="情报库-已录入.html") 已录入
+        //- a.item(class={active: subtitle == '已录入'}, href="情报库-已录入.html") 已录入
         a.item(class={active: subtitle == '已翻译'}, href="情报库-已翻译.html") 已翻译
       a.item(class={
           active: title == '情报审批',
