--- a/src/html/part/情报审批.pug
+++ b/src/html/part/情报审批.pug
@@ -9,8 +9,8 @@ append style
 block content
   .m-subcont
     .dir 当前位置：#{title} > #{subtitle}
-    +filter(title + '-情报库')
-    +c-table()
+    +approval(title + '-情报库')
+    +qc-table(subtitle)
   +pagenum()
 
 
