--- a/src/html/part/情报库.pug
+++ b/src/html/part/情报库.pug
@@ -10,7 +10,7 @@ block content
   .m-subcont
     .dir 当前位置：#{title} > #{subtitle}
     +filter(title + '-情报库')
-    +c-table()
+    +c-table(subtitle)
   +pagenum()
 
 
