--- a/src/html/情报管理-情报录入.pug
+++ b/src/html/情报管理-情报录入.pug
@@ -25,7 +25,7 @@ block content
                             img.ico(src="image/basic-drop-arrow.png")
                         .list
                             .item 法规
-                            .item 法规
+                            .item 法规1
                 li
                     label.title 国别
                     input.s-input
