--- a/src/html/情报管理-情报查看.pug
+++ b/src/html/情报管理-情报查看.pug
@@ -20,8 +20,8 @@ block content
           .head
             label.m-cb
               input(type="checkbox", class="listitemcb")
-              .img   
-            .title #{i}.国家海洋预报台:"苗柏"最大可能登陆地点是香港
+              .img
+            .title #{i}.<a href="情报管理-情报详情.html">国家海洋预报台:"苗柏"最大可能登陆地点是香港</a>
             .time 2017-04-07 14:37:00
           .body
             .ch-abs
