--- a/src/style/情报库.styl
+++ b/src/style/情报库.styl
@@ -305,6 +305,71 @@
         text-align center
         display inline-block
         margin-left 30px
+
+.conten-detail
+  padding 0 45px
+  >.title
+    font-size 18px
+    color #2c2f32
+    margin 30px 0
+    line-height 32px
+    >label
+      float right
+      font-size 12px
+      height 32px
+      line-height 32px
+      border 1px solid #d9d9d9
+      text-align center
+      width 94px
+      line-height 32px
+      position relative
+      >input
+        display none
+        width 92px
+        height 32px
+      .img
+        background: url('../image/nocollect.png') no-repeat left 8px center
+        height 32px
+        width 25px
+        background-size 15px 12px
+      >input:checked ~ .img
+        background: url('../image/collect.png') no-repeat left 8px center
+      .fo
+        position absolute
+        top 0
+        left 33px
+
+  p
+    line-height 22px
+    font-size 14px
+    margin-bottom 22px
+    label
+      color #696969
+    label.info
+      color #909499
+    label.title 
+      padding-left 40px
+    label.copy
+      width 80px
+      height 24px
+      line-height 24px
+      text-align center
+      color #ffffff
+      display inline-block
+      vertical-align middle
+      margin-left 40px
+    label.copyUrl
+      background #5cc86a
+    label.copyText
+      background #4188d8
+  p.info
+    line-height 30px
+    width 700px
+.split
+  border 1px dotted #d9dce0
+  margin 0 45px
+.bot115
+  padding-bottom 115px
         
 
 
