--- a/src/html/part/大屏管理-专题详情.pug
+++ b/src/html/part/大屏管理-专题详情.pug
@@ -10,6 +10,13 @@ block content
       a.item(href=`大屏管理-专题详情-${s}.html`, class={active: sstitle == s})= s
   .m-subcont
     .dir 当前位置：#{title} > 专题详情 > #{sstitle}
+    .zt-title 
+      label 专题详情:
+      p 沛县庆祝“三八”国际劳动妇女节暨表彰大会举行
+    .zt-info 
+      label 专题简介:
+      p 沛县庆祝“三八”国际劳动妇女节暨表彰大会举行沛县庆祝“三八”国际劳动妇女节暨表彰大会举行县庆祝“三八”国际劳动妇女节暨表彰大会举行县庆祝“三八”国际劳动妇女节暨表彰大会举行
+      a(href="javascript:;") 点击查看更多
     +filter('大屏管理-情报展示')
     +contlist('大屏管理-情报展示')
   .m-showbtn= sstitle == "展示" ? "取消展示" : "展示" 
