--- a/src/style/basic.styl
+++ b/src/style/basic.styl
@@ -475,7 +475,7 @@ body
     width 70px
   >.sum
   >.sumt
-    width 40px
+    width 41px
     height 30px
     line-height 30px
     display inline-block
@@ -484,6 +484,12 @@ body
     font-size 12px
   >.sumt
     min-width 60px
+    span 
+      color #337fd5
+      text-decoration:underline
+      text-align center
+  >.t
+    margin-left -28px  
 
 .m-showbtn
   float right
