--- a/src/style/情报库.styl
+++ b/src/style/情报库.styl
@@ -358,6 +358,7 @@
       display inline-block
       vertical-align middle
       margin-left 40px
+      border-radius 2px
     label.copyUrl
       background #5cc86a
     label.copyText
