--- a/src/html/情报管理-情报详情.pug
+++ b/src/html/情报管理-情报详情.pug
@@ -30,7 +30,7 @@ block content
                 label.info 2017-03-07 14:37:00
             p
                 label 原文连接：
-                lebel.info http://www.xici.net/d238177928.htm
+                label.info http://www.xici.net/d238177928.htm
                 label.copy.copyUrl 复制链接
                 label.copy.copyText 复制文本 
             p.info   County leaders Zhang Lei, Liu Huadong, Xu Longbin, Wang Suzhen, county women's FederationPresident Susasa, education secretary He Lei, county propaganda department vice minister Hu 
@@ -52,7 +52,7 @@ block content
                 label.info 2017-03-07 14:37:00
             p
                 label 原文连接：
-                lebel.info http://www.xici.net/d238177928.htm
+                label.info http://www.xici.net/d238177928.htm
                 label.copy.copyUrl 复制链接
                 label.copy.copyText 复制文本 
             p.info   沛县庆祝“三八”国际劳动妇女节暨表彰大会于三月七日在县职教中心礼堂举行。县领导张磊、刘华东、徐龙彬、王素真，县妇联主席苏莎莎、教育局局长贺磊、县委宣传部常务副部长胡红侠、妇联副主席张素华及社会各界的妇女代表、受表彰的团体和个人、爱心志愿者600多人出席了会议。
