情报查看修改

--- a/src/html/情报管理-情报查看.pug
+++ b/src/html/情报管理-情报查看.pug
@@ -21,15 +21,16 @@ block content
             label.m-cb
               input(type="checkbox", class="listitemcb")
               .img
-            .title #{i}.<a href="情报管理-情报详情.html">国家海洋预报台:"苗柏"最大可能登陆地点是香港</a>
+            .title #{i}.<a href="情报管理-情报详情.html">国家海洋预报台:"苗柏"最大可能登陆地点是香港最大可能登陆地点是香港最大可能登陆地点是香港最大可能登陆地点是香港</a>
             .time 2017-04-07 14:37:00
           .body
             .ch-abs
               label 中文摘要 : 
-              .cont 国家海洋预报台发布：今年第2号台风“苗柏”今天中午已加强为强热带风暴级，15时其位于距离广东省深圳市偏南方向165公里的南海北部海面上。预计“苗柏”将于今天前半夜在珠江口以东沿海登陆，多家预报机构都显示，最大可能登陆地点就是香港！
+              .cont 国家海洋预报台发布：今年第2号台风“苗柏”今天中午已加强为强热带风暴级，国家海洋预报台发布：今年第2号台风“苗柏”今天中午已加强为强热带风暴级，国家海洋预报台发布：今年第2号台风“苗柏”今天中午已加强为强热带风暴级，15时其位于距离广东省深圳市偏南方向165公里的南海北部海面上。预计“苗柏”将于今天前半夜在珠江口以东沿海登陆，多家预报机构都显示，最大可能登陆地点就是香港！
+            .divider
             .en-abs
               label 英文摘要 :
-              .cont National Typhoon Forecast: Typhoon No. second this year has been strengthened as a tropical storm at noon today. At 15, it is located on the North Sea of the South China Sea, 165 kilometers south of Guangdong City, Shenzhen province. It is expected that the plant will land in the coastal waters east of the Pearl  ... 
+              .cont National Typhoon Forecast: Typhoon No. second this year has been strengthened agthened as a tropical storm at noon today. At 15, it is s a tropical storm at noon today. At 15, it is located on the North Sea of the South China Sea, 165 kilometers south of Guangdong City, Shenzhen province. It is expected that the plant will land in the coastal waters east stal waters east ostal waters east ostal waters east ostal waters east oof the Pearl  ... 
           .foot 
             .left-info
               label 来源 :
