--- a/src/style/basic.styl
+++ b/src/style/basic.styl
@@ -414,6 +414,10 @@ body
         color #323131
         font-size 16px
         float left
+        width 820px
+        overflow hidden
+        text-overflow ellipsis
+        white-space nowrap
         >a 
           text-decoration none
           color #323131
