--- a/src/style/情报管理-情报查看.styl
+++ b/src/style/情报管理-情报查看.styl
@@ -4,20 +4,23 @@ input
   padding-left 28px
   height 120px
   margin-bottom 22px
+  >.divider
+    border 1px dashed #dbe0e4
+    margin-bottom 15px
   >.ch-abs
     margin-bottom 15px
+    height 44px
+    overflow hidden
     >label
       float left
     >.cont
       font-size 12px
       text-indent 4px
-      border-bottom 1px dashed #dbe0e4
-      line-height: 22px;
-      padding-bottom: 15px;
+      line-height 22px
   >.en-abs
     height 44px
-    
-
+    line-height 22px
+    overflow hidden
     >label
       float left
     >.cont
