--- a/src/html/part/大屏管理-专题详情.pug
+++ b/src/html/part/大屏管理-专题详情.pug
@@ -15,7 +15,7 @@ block content
       p 沛县庆祝“三八”国际劳动妇女节暨表彰大会举行
     .zt-info 
       label 专题简介:
-      p 沛县庆祝“三八”国际劳动妇女节暨表彰大会举行沛县庆祝“三八”国际劳动妇女节暨表彰大会举行县庆祝“三八”国际劳动妇女节暨表彰大会举行县庆祝“三八”国际劳动妇女节暨表彰大会举行
+      p.zt 沛县庆祝“三八”国际劳动妇女节暨表彰大会举行沛县庆祝“三八”国际劳动妇女节暨表彰大会举行县庆祝“三八”国际劳动妇女节暨表彰大会举行县庆祝“三八”国际劳动妇女节暨表彰大会举行
       a(href="javascript:;") 点击查看更多
     +filter('大屏管理-情报展示')
     +contlist('大屏管理-情报展示')
