--- a/src/html/part/情报审批.pug
+++ b/src/html/part/情报审批.pug
@@ -9,7 +9,7 @@ append style
 block content
   .m-subcont
     .dir 当前位置：#{title} > #{subtitle}
-    +approval(title + '-情报库')
+    +filter('情报管理-情报查看')
     +qc-table(subtitle)
   +pagenum()
 
