--- a/src/html/part/情报库-编辑情报.pug
+++ b/src/html/part/情报库-编辑情报.pug
@@ -33,7 +33,7 @@ block content
           textarea
         li
           span.e-title 备注
-          textarea.e-remarks(placeholder='请填写备注信息')
+          script#myEditor(type="text/plain",style="width:630px;height:140px")
       .operate
         div.rest 重置
         div.success 确定
