--- a/src/style/大屏管理-报告展示.styl
+++ b/src/style/大屏管理-报告展示.styl
@@ -63,6 +63,8 @@
       text-align center
       cursor pointer
       color #ffffff
+      outline none
+      border none
 
 .m-report-list
   padding 0 34px 1px
