--- a/src/style/情报管理-情报查看.styl
+++ b/src/style/情报管理-情报查看.styl
@@ -37,6 +37,8 @@ input
     .cont
       display inline-block
       margin-right 12px
+    .selt
+      vertical-align middle
     .edit
       color #77bc7e
     .w-dropdown
