--- a/src/html/part/大屏管理-报告展示.pug
+++ b/src/html/part/大屏管理-报告展示.pug
@@ -16,40 +16,35 @@ block content
       a.item(href=`大屏管理-报告展示-${s}.html`, class={active: sstitle == s})= s
   .m-subcont
     .dir 当前位置：#{title} > #{subtitle} > #{sstitle}
-    .m-filter-report
-      .line
-        .label 报告来源
-        .m-dropdown.select.fixed
-          button.btn
-            .text 情报分析员
-            img.ico(src="image/basic-drop-arrow.png")
-          .list
-            .item 情报分析员
-            .item 情报专家
-        .label 报告时间
-        input.datetime(type="text")
-        .split
-        input.datetime(type="text")
-      .line
-        .label 报告类型
-        .m-dropdown.select.fixed
-          button.btn
-            .text 情报分析员
-            img.ico(src="image/basic-drop-arrow.png")
-          .list
-            .item 保密情报参考
-            .item 保密工作专利报告
-        .btn 确定
-    .m-report-list
-      - var n = 0
-      while n ++< 12
-        .listItem
-          .thumbnail(style="background-image: url(image/dpgl-bgzs-reportdemo.png)")
-          .title
-            img(src="image/dpgl-bgzs-reportdoc.png")
-            .text 保密情报参考
-          .mask
-            a.btn(href="javascript:;") 取消展示
-            a.btn.cancel(href="javascript:;") 取消
+    form(action="")
+      .m-filter-report
+        .line
+          .label 报告来源
+          .m-dropdown.select.fixed
+            select.selt
+              option 情报分析员
+              option 情报专家
+          .label 报告时间
+          input.datetime(type="text")
+          .split
+          input.datetime(type="text")
+        .line
+          .label 报告类型
+          .m-dropdown.select.fixed
+            select.selt
+              option 情报分析员
+              option 情报专家
+          button.btn 确定
+      .m-report-list
+        - var n = 0
+        while n ++< 12
+          .listItem
+            .thumbnail(style="background-image: url(image/dpgl-bgzs-reportdemo.png)")
+            .title
+              img(src="image/dpgl-bgzs-reportdoc.png")
+              .text 保密情报参考
+            .mask
+              a.btn(href="javascript:;") 取消展示
+              a.btn.cancel(href="javascript:;") 取消
   .m-showbtn= sstitle == "展示" ? "取消展示" : "展示" 
   +pagenum()
